# cudaq-molecular-simulation-blueprint

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
app/: __init__.py
app/api/: deps.py  main.py  schemas.py
app/api/routes/: health.py  results.py  run.py
app/benchmark/: __init__.py  compare.py  metrics.py  reports.py  runner.py
app/cli/: __init__.py  main.py
app/core/: __init__.py  config.py  logging.py  metadata.py  system_info.py
app/quantum/: __init__.py  ansatz.py  backends.py  chemistry.py  experiment.py  h2_vqe.py  lih_vqe.py  optimizers.py  reference_data.py
app/storage/: __init__.py  filesystem.py  manifests.py  serializers.py
app/tests/: conftest.py  test_api_health.py  test_backends.py  test_benchmark.py  test_chemistry_data_dir.py  test_cli.py  test_h2_cpu.py  test_reference_data.py  test_results_schema.py
app/ui/: __init__.py  server.py
app/ui/static/: app.css
app/ui/templates/: base.html  compare.html  index.html  result_detail.html  results.html  run.html
containers/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: akamai-deployment.md  architecture.md  blog-post-draft.md  blog-support-notes.md  experiment-methodology.md  index.md  project-charter.md  results-interpretation.md  scope-and-non-goals.md
infra/ansible/: ansible.cfg  inventory.example.ini  playbook.yml
infra/ansible/roles/app/handlers/: main.yml
infra/ansible/roles/app/tasks/: main.yml
infra/ansible/roles/app/templates/: cudaq-blueprint.service.j2
infra/ansible/roles/docker/handlers/: main.yml
infra/ansible/roles/docker/tasks/: main.yml
infra/ansible/roles/nvidia_driver/handlers/: main.yml
infra/ansible/roles/nvidia_driver/tasks/: main.yml
infra/k8s/future/: README.md
infra/terraform/akamai/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
results/akamai-blackwell-multiseed/: README.md  SUMMARY.csv  comparison.json
scripts/: bootstrap_host.sh  export_results.sh  run_h2_cpu.sh  run_h2_gpu.sh  run_lih_gpu.sh  verify_gpu.sh
