[project]
name = "cudaq-molecular-simulation-blueprint"
version = "0.1.0"
description = "Portable, reproducible reference implementation for hybrid quantum-classical molecular simulation using NVIDIA CUDA-Q and cuQuantum, validated on Akamai Cloud Blackwell GPU infrastructure."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "cudaq-molecular-simulation-blueprint contributors" },
]
keywords = [
    "quantum-computing",
    "cuda-q",
    "cuquantum",
    "vqe",
    "molecular-simulation",
    "hybrid-quantum-classical",
    "nvidia",
    "blackwell",
    "akamai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    # Quantum runtime
    "cudaq>=0.14.0,<0.15.0",
    # Numerics
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    # Chemistry preprocessing - cudaq.chemistry uses these under the hood
    "openfermion>=1.6,<2.0",
    "openfermionpyscf>=0.5; sys_platform == 'linux'",
    "pyscf>=2.6,<3.0",
    # API + UI
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0,<3.0",
    # Schemas, config
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    # Logging
    "structlog>=24.1,<26.0",
    # Misc
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "types-requests",
    "pre-commit>=3.7,<5.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocs-mermaid2-plugin>=1.1,<2.0",
]
notebooks = [
    "jupyterlab>=4.2,<5.0",
    "matplotlib>=3.8,<4.0",
    "pandas>=2.2,<3.0",
]

[project.scripts]
cudaq-bp = "app.cli.main:app"

[project.urls]
Homepage = "https://github.com/jgdynamite/cudaq-molecular-simulation-blueprint"
Documentation = "https://github.com/jgdynamite/cudaq-molecular-simulation-blueprint#readme"
Repository = "https://github.com/jgdynamite/cudaq-molecular-simulation-blueprint"
Issues = "https://github.com/jgdynamite/cudaq-molecular-simulation-blueprint/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- Tool configuration ----------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "notebooks",
    "infra",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "TID",   # tidy-imports
    "PL",    # pylint
    "PT",    # pytest
]
ignore = [
    "E501",   # line length handled by formatter
    "PLR0913", # too many arguments - VQE configs are wide
    "PLR2004", # magic numbers - common in physics constants
    "N806",   # variable in function should be lowercase - we use H for Hamiltonian
    "N803",   # argument should be lowercase - same
]

[tool.ruff.lint.per-file-ignores]
"app/tests/**" = ["PLR0913", "PLR2004", "S101", "PLC0415"]
"app/quantum/reference_data.py" = ["RUF001"]
# PLW0603: deliberate process-wide singletons in core/config.py and core/logging.py.
"app/core/config.py" = ["PLW0603"]
"app/core/logging.py" = ["PLW0603"]
# Lazy imports of cudaq are intentional: keep app importable on hosts without CUDA-Q installed.
"app/quantum/backends.py" = ["PLC0415"]
"app/quantum/chemistry.py" = ["PLC0415"]
"app/quantum/ansatz.py" = ["PLC0415"]
"app/quantum/optimizers.py" = ["PLC0415"]
"app/quantum/experiment.py" = ["PLC0415"]
# Lazy imports of the reference-data lookup avoid a circular dependency between metrics and reference_data.
"app/benchmark/metrics.py" = ["PLC0415"]
# CLI commands lazy-import the heavy modules to keep --help fast.
"app/cli/main.py" = ["PLC0415"]
# API lazy-imports the experiment runners (cudaq cost) and UI module (UI is optional).
"app/api/main.py" = ["PLC0415"]
"app/api/routes/run.py" = ["PLC0415"]
# Coordinator singleton is intentional.
"app/api/deps.py" = ["PLW0603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "notebooks",
    "infra",
    "build",
    "dist",
    ".venv",
]

[[tool.mypy.overrides]]
module = [
    "cudaq",
    "cudaq.*",
    "openfermion.*",
    "openfermionpyscf.*",
    "pyscf.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["app/tests"]
markers = [
    "gpu: requires an NVIDIA GPU and the CUDA-Q nvidia backend",
    "slow: longer-running tests (>30s)",
    "integration: end-to-end tests touching multiple subsystems",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:openfermion.*",
    "ignore::DeprecationWarning:pyscf.*",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/tests/*",
    "app/ui/*",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
